--- a/Tour-Booking BE/public/email/partnerWelcome.pug
+++ b/Tour-Booking BE/public/email/partnerWelcome.pug
@@ -1,10 +1,8 @@
 doctype html
 html
-  head
-    title Chào mừng đối tác
   body
     h1 Xin chào #{firstName},
-    p Cảm ơn bạn đã trở thành đối tác của Fvivu!
+    p Cảm ơn bạn đã trở thành Manager của Fvivu!
     p Tài khoản của bạn đã được tạo với thông tin:
     ul
       li Email: #{email}
